# Scalp-Analytics

./: AGENTS.md  DEVELOPMENT.md  README.md
.github/workflows/: development.yml
.husky/: commit-msg  pre-commit
Documentation/: AI-TRAINING.md  API-DESIGN.md  ARCHITECTURE.md  DATABASE-SCHEMA.md  MVP.md  PRD.md  ROADMAP.md  TECH-STACK.md  USER-FLOW.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
frontend/: .eslintrc.json  .prettierrc  package.json  tsconfig.json
